# image-search-and-store

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  LICENSE  PLAN.md  README.md  docker-compose.yml  manage.py  pyproject.toml
image/: admin.py  embeddings.py  image_processing.py  models.py  permissions.py  serializers.py  storage.py  tasks.py  tests.py  urls.py  vector.py  views.py
image/management/commands/: reindex_images.py  warm_embedding_model.py
image/migrations/: 0001_initial.py
image/templates/image/: home.html
image_search_and_store/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
src/config/: __init__.py  settings.py
src/embeddings/: tasks.py
src/images/: models.py
src/images/api/: serializers.py
src/images/api/v1/: views.py
src/images/migrations/: 0004_alter_imagemetadata_name.py
src/static/frontend/css/: style.css
src/static/frontend/js/: app.js
src/templates/frontend/: index.html
src/worker/: celery.py
