[project]
name = "prp"
version = "0.1.0"
description = "Image search and storage API"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django>=6.0.6",
    "djangorestframework>=3.17.1",
    "django-filter>=25.2",
    "psycopg[binary]>=3.3.0",
    "celery>=5.6.0",
    "redis>=7.0.0",
    "boto3>=1.41.0",
    "qdrant-client>=1.16.0",
    "pillow>=12.0.0",
    "gunicorn>=23.0.0",
    "python-dotenv>=1.2.2",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
]

[tool.uv.sources]
torch = [{ index = "pytorch-cpu" }]
torchvision = [{ index = "pytorch-cpu" }]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
